# mwandishi

./: LICENSE  README  curly  feugarcon.cabal
app/: Main.hs
src/: MyLib.hs
